--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/themes": "^3.1.6",
     "@tanstack/react-query": "^5.64.1",
     "clsx": "^2.1.1",
+    "jotai": "^2.11.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fps": "^1.0.6",
     "react-resizable-panels": "^2.1.7",
     "three": "^0.172.0"
   },
